src/client/index-next.css
@keyframes dashed-player {
 0% {
  opacity: 1;
 }
 60% {
  opacity: 0;
 }
 100% {
  opacity: 1;
 }
}

@keyframes icon-fade {
 0% {
  opacity: 1;
 }
 60% {
  opacity: 0;
 }
 100% {
  opacity: 1;
 }
}

.chakra-stack .MuiLinearProgress-dashed {
      /* animation: dashed-player 3s infinite linear !important;
      background-image: radial-gradient(var(--chakra-colors-color-palette-solid) 0%, var(--chakra-colors-color-palette-solid) 16%, transparent 42%);
      background-position: 0 -1px !important; */
      animation: unset !important;
      background-image: unset !important;
      background-position: unset !important;
      background-color: var(--chakra-colors-color-palette-muted) 
}
.playerContainer .chakra-stack .MuiLinearProgress-dashed {
      background-color: var(--chakra-colors-color-palette-emphasized) 
}
.chakra-stack .MuiLinearProgress-bar1 {
      background-color: var(--chakra-colors-color-palette-solid) !important;
}
.chakra-stack .MuiLinearProgress-bar2 {
      background-color: var(--chakra-colors-color-palette-500) !important;
}
.chakra-stack .MuiLinearProgress-indeterminate {
      background-color: var(--chakra-colors-color-palette-500) !important;
}
.chakra-stack .MuiLinearProgress-root {
      height: 8px;
}

